--- a/Whats-clickjacking/index.html
+++ b/Whats-clickjacking/index.html
@@ -37,7 +37,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img
-            src="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png"
+            src="../assets/logo.webp"
             alt="Free click jacking test, free click jacker tester, free live click jacker, .lve click jacker, click jacker .io, click-jacking, logo" width="50" height="50" class="d-inline-block align-text-top">
             <span class="navHeading">Click Jacking Tester</span>
           </a>
